# chess-engine

./: .gitignore  CMakeLists.txt  README.md
dependencies/: chess-core.cmake  chess-uci.cmake  gtest.cmake
src/engine/: CMakeLists.txt  engine.cpp  evaluator.cpp  main.cpp  static_evaluator.cpp  transposition_table.cpp
src/engine/include/chess/engine/: engine.h  evaluator.h  static_evaluator.h  transposition_table.h
test/: CMakeLists.txt  test_common.h
test/engine/: CMakeLists.txt  engine_test.cpp  main.cpp
